--- a/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -8,7 +8,7 @@
     "description": "The alt text of navbar logo"
   },
   "item.label.Panda Series": {
-    "message": "Panda Series",
+    "message": "Panda 系列",
     "description": "Navbar item with label Panda Series"
   },
   "item.label.DIY 系列": {
